# Human_Detection_Tracking-CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  doxygen.config  getModels.sh  install_dependencies.sh  run_app.sh  run_cppcheck.sh  run_cpplint.sh  run_tests.sh
Results/: cpplint_test.txt
app/: CMakeLists.txt  HumanDetector_test.cpp  main.cpp
docs/html/: HumanDetector_8cpp.html  HumanDetector_8cpp__incl.map  HumanDetector_8cpp__incl.md5  HumanDetector_8h.html  HumanDetector_8h__dep__incl.map  HumanDetector_8h__dep__incl.md5  HumanDetector_8h__incl.map  HumanDetector_8h__incl.md5  HumanDetector_8h_source.html  Robot_8cpp.html  Robot_8cpp__incl.map  Robot_8cpp__incl.md5  Robot_8h.html  Robot_8h__dep__incl.map  Robot_8h__dep__incl.md5  Robot_8h__incl.map  Robot_8h__incl.md5  Robot_8h_source.html  annotated.html  classHumanDetector-members.html  classHumanDetector.html  classRobot-members.html  classRobot.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js
docs/latex/: HumanDetector_8cpp.tex  HumanDetector_8cpp__incl.md5  HumanDetector_8h.tex  HumanDetector_8h__dep__incl.md5  HumanDetector_8h__incl.md5  Robot_8cpp.tex  Robot_8cpp__incl.md5  Robot_8h.tex  Robot_8h__dep__incl.md5  Robot_8h__incl.md5  annotated.tex  classHumanDetector.tex  classRobot.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex
include/: HumanDetector.h  ModelThresholds.h  ModelUtils.h  Robot.h
results/: cppcheck_test.txt  cpplint_test.txt
scripts/: build_with_coverage.sh  getModels.sh  install_dependencies.sh
src/: CMakeLists.txt  HumanDetector.cpp  ModelThresholds.cpp  ModelUtils.cpp  Robot.cpp
test/: CMakeLists.txt  HumanDetector_test.cpp  ModelUtils_Mock.cpp  Robot_test.cpp  main.cpp  test.cpp  test_human_detector.cpp  test_robot.cpp
test/include/: test_HumanDetector.h  test_Robot.h
test/src/: CMakeLists.txt  test_HumanDetector.cpp  test_Robot.cpp
